--- a/file_splitter/chunky/requirements.txt
+++ b/file_splitter/chunky/requirements.txt
@@ -11,7 +11,7 @@ numpy==1.23.5
 pandas==1.5.2
 psycopg2==2.9.5
 python-dateutil==2.8.2
-python-magic-bin==0.4.14
+# python-magic-bin==0.4.14
 pytz==2022.6
 six==1.16.0
 sqlparse==0.4.3
